fix header so full nav wraps and appears on page

--- a/styles.css
+++ b/styles.css
@@ -34,8 +34,10 @@ header {
   width: 100%;
   vertical-align: middle;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   position: -webkit-sticky;
+    position: sticky;
 }
 
 header nav {
@@ -433,8 +435,25 @@ textarea {
   color: var(--grayish-purple);
 }
 
-@media screen and (max-width: 800px) {
-    .biwocNav a {
-        max-width: 95%;
+@media screen and (max-width: 980px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+        position: relative;
+    }
+ 
+    header h1 {
+        width: 100%;
+        text-align: center;
+    }
+ 
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+ 
+    header nav ul li a {
+        font-size: 20px;
     }
 }
